--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -174,10 +174,11 @@ a {
 .intro {
     display: table;
     width: 100%;
-    height: auto;
+    height: 100%;
     padding-top: 50px;
     text-align: center;
     color: white;
+    margin-bottom: 45px;
     .intro-bg {
         width: 100%;
         height: 100%;
@@ -207,6 +208,11 @@ a {
         }
         .intro-text {
             font-size: 18px;
+        }
+
+        .row {
+            margin-top: 75px;
+            margin-bottom: 0;
         }
     }
     .btn-circle {
